# damiao_gripper

./: .gitignore  README.md
src/gripper_dm/: package.xml  setup.cfg  setup.py
src/gripper_dm/config/: gripper.yaml
src/gripper_dm/files/: gripper.md  new_gripper.md
src/gripper_dm/gripper_dm/: canfd_driver.py  gripper_controller.py  gripper_node.py  motor_protocol.py
src/gripper_dm/launch/: gripper.launch.py
src/gripper_dm/scripts/: comm_test.py  confirm_id.py  detailed_mode_debug.py  diag_can.py  diag_mode.py  fast_scan.py  full_diagnosis.py  scan_all_ids.py  scan_control_ids.py  scan_motor.py  test_brs_options.py  test_classic_can.py  test_damiao_original.py  test_mit_control.py  test_mit_debug.py  test_mit_full.py  test_mit_mode.py  test_mit_reenable.py  test_mode_with_disable.py  test_pos_vel.py  test_vel.py
src/gripper_dm_msgs/: CMakeLists.txt  package.xml
src/gripper_dm_msgs/msg/: GripperStatus.msg
src/gripper_dm_msgs/srv/: SetGripper.srv
